--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <h3 class="font-bold text-3xl">Artikel</h3>
             <div class="mt-4 flex gap-x-12">
                 <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-                    <img class="rounded-t-lg object-cover" src="/assets/img/Layanan Kolaborasi.jpg"
+                    <img class="rounded-t-lg object-cover" src="assets/img/Layanan Kolaborasi.jpg"
                         alt="Berita" />
                     <div class="p-5">
                         <p class="text-sm text-gray-400 mb-3">
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-                    <img class="rounded-t-lg object-cover" src="/assets/img/Layanan Kolaborasi.jpg"
+                    <img class="rounded-t-lg object-cover" src="assets/img/Layanan Kolaborasi.jpg"
                         alt="Berita" />
                     <div class="p-5">
                         <p class="text-sm text-gray-400 mb-3">
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-                    <img class="rounded-t-lg object-cover" src="/assets/img/Layanan Kolaborasi.jpg"
+                    <img class="rounded-t-lg object-cover" src="assets/img/Layanan Kolaborasi.jpg"
                         alt="Berita" />
                     <div class="p-5">
                         <p class="text-sm text-gray-400 mb-3">
