update: penambahan banyak hal

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
                 <span class="self-center text-2xl font-semibold whitespace-nowrap">BeKASA</span>
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0">
-                <!--<button type="button"
-                    class="text-black hover:bg-gray-100 font-medium rounded-full text-xl px-4 py-2 text-center"><i
-                        class="bi bi-person-fill"></i></button>-->
                 <button data-collapse-toggle="navbar-menu" type="button"
                     class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
                     aria-controls="navbar-sticky" aria-expanded="false">
@@ -43,15 +40,15 @@
                             aria-current="page">Beranda</a>
                     </li>
                     <li>
-                        <a href="/profil.html"
+                        <a href="profil.html"
                             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:p-0">Profil</a>
                     </li>
                     <li>
-                        <a href="/konsultasi.html"
-                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:p-0">Konsultasi</a>
+                        <a href="kotaksaran.html"
+                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:p-0">Kotak Saran</a>
                     </li>
                     <li>
-                        <a href="/artikel.html"
+                        <a href="artikel.html"
                             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:p-0">Artikel</a>
                     </li>
                 </ul>
@@ -116,11 +113,7 @@
                     <h5 class="font-semibold text-2xl">
                         Layanan Orientasi
                     </h5>
-                    <p class="text-justify mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
-                        Vivamus lacinia arcu commodo fermentum faucibus. Quisque scelerisque orci ac turpis mattis
-                        rutrum. Pellentesque ornare quam at nisi facilisis suscipit. Suspendisse et dolor enim. Sed
-                        vestibulum velit congue felis porta, sed convallis neque ultricies.</p>
+                    <p class="text-justify mt-4">Layanan ini diperuntukkan bagi siswa baru untuk membantu mereka mengenal lingkungan sekolah, peraturan, dan nilai-nilai yang dijunjung tinggi. Melalui layanan ini, siswa dapat memahami tata tertib, jadwal kegiatan, serta berbagai fasilitas yang tersedia. Pengenalan ini bertujuan untuk memudahkan siswa dalam beradaptasi dan merasa nyaman di lingkungan sekolah yang baru.</p>
                 </div>
             </div>
             <div class="mt-4 flex flex-nowrap flex-col md:flex-row-reverse gap-4">
@@ -131,11 +124,7 @@
                     <h5 class="font-semibold text-2xl">
                         Layanan Konsultasi
                     </h5>
-                    <p class="text-justify mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
-                        Vivamus lacinia arcu commodo fermentum faucibus. Quisque scelerisque orci ac turpis mattis
-                        rutrum. Pellentesque ornare quam at nisi facilisis suscipit. Suspendisse et dolor enim. Sed
-                        vestibulum velit congue felis porta, sed convallis neque ultricies.</p>
+                    <p class="text-justify mt-4">Layanan konsultasi memberikan kesempatan bagi siswa untuk berkonsultasi mengenai berbagai permasalahan pribadi, akademis, atau sosial yang mereka hadapi. Melalui layanan ini, siswa dapat bertemu dengan konselor yang akan mendengarkan, memahami, dan memberikan arahan yang tepat untuk membantu mereka menemukan solusi terbaik. Layanan ini dirancang untuk mendukung kesejahteraan psikologis dan emosional siswa.                    </p>
                 </div>
             </div>
             <div class="mt-4 flex flex-nowrap flex-col md:flex-row gap-4">
@@ -144,13 +133,9 @@
                 </div>
                 <div class="w-full md:w-4/6">
                     <h5 class="font-semibold text-2xl">
-                        Penanangan Siswa Terlambat
+                        Penanganan Siswa Terlambat
                     </h5>
-                    <p class="text-justify mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
-                        Vivamus lacinia arcu commodo fermentum faucibus. Quisque scelerisque orci ac turpis mattis
-                        rutrum. Pellentesque ornare quam at nisi facilisis suscipit. Suspendisse et dolor enim. Sed
-                        vestibulum velit congue felis porta, sed convallis neque ultricies.</p>
+                    <p class="text-justify mt-4">Layanan ini menangani siswa yang datang terlambat ke sekolah dengan memberikan bimbingan untuk meningkatkan disiplin. Melalui pendekatan yang bersifat edukatif, layanan ini membantu siswa memahami pentingnya ketepatan waktu dan tanggung jawab. Selain itu, layanan ini juga memberikan pemahaman tentang manajemen waktu yang dapat membantu siswa menghindari keterlambatan di masa depan.                    </p>
                 </div>
             </div>
             <div class="mt-8 flex flex-nowrap flex-col md:flex-row-reverse gap-4">
@@ -161,11 +146,7 @@
                     <h5 class="font-semibold text-2xl">
                         Bimbingan Klasikal
                     </h5>
-                    <p class="text-justify mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
-                        Vivamus lacinia arcu commodo fermentum faucibus. Quisque scelerisque orci ac turpis mattis
-                        rutrum. Pellentesque ornare quam at nisi facilisis suscipit. Suspendisse et dolor enim. Sed
-                        vestibulum velit congue felis porta, sed convallis neque ultricies.</p>
+                    <p class="text-justify mt-4">Layanan bimbingan klasikal menyediakan sesi bimbingan kelompok yang disesuaikan dengan kebutuhan siswa dalam berbagai aspek, seperti pengembangan diri, keterampilan sosial, dan kemampuan akademis. Melalui pendekatan bimbingan klasikal, siswa dibekali dengan pengetahuan dan keterampilan yang mendukung perkembangan diri mereka secara menyeluruh.</p>
                 </div>
             </div>
             <div class="mt-8 flex flex-nowrap flex-col md:flex-row gap-4">
@@ -176,11 +157,7 @@
                     <h5 class="font-semibold text-2xl">
                         Perencanaan Karir
                     </h5>
-                    <p class="text-justify mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
-                        Vivamus lacinia arcu commodo fermentum faucibus. Quisque scelerisque orci ac turpis mattis
-                        rutrum. Pellentesque ornare quam at nisi facilisis suscipit. Suspendisse et dolor enim. Sed
-                        vestibulum velit congue felis porta, sed convallis neque ultricies.</p>
+                    <p class="text-justify mt-4">Layanan perencanaan karir bertujuan untuk membantu siswa dalam memahami minat, bakat, dan potensi diri yang dapat dikembangkan menuju masa depan karier yang diinginkan. Siswa dapat mengikuti asesmen atau bimbingan yang dirancang untuk memandu mereka dalam memilih jurusan atau bidang pekerjaan yang sesuai dengan minat dan kemampuan mereka.</p>
                 </div>
             </div>
             <div class="mt-8 flex flex-nowrap flex-col md:flex-row-reverse gap-4">
@@ -191,11 +168,7 @@
                     <h5 class="font-semibold text-2xl">
                         Layanan Kolaborasi
                     </h5>
-                    <p class="text-justify mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
-                        Vivamus lacinia arcu commodo fermentum faucibus. Quisque scelerisque orci ac turpis mattis
-                        rutrum. Pellentesque ornare quam at nisi facilisis suscipit. Suspendisse et dolor enim. Sed
-                        vestibulum velit congue felis porta, sed convallis neque ultricies.</p>
+                    <p class="text-justify mt-4">Layanan ini mengedepankan kolaborasi antara pihak sekolah, wali kelas, dan orang tua untuk mendukung perkembangan dan kesejahteraan siswa. Melalui layanan kolaborasi, pihak-pihak terkait dapat berkomunikasi dan bekerja sama untuk menciptakan lingkungan yang kondusif dan mendukung pertumbuhan siswa secara holistik.</p>
                 </div>
             </div>
         </section>
@@ -206,14 +179,14 @@
                     <img class="rounded-t-lg object-cover" src="assets/img/Layanan Kolaborasi.jpg"
                         alt="Berita" />
                     <div class="p-5">
-                        <p class="text-sm text-gray-400 mb-3">
+                        <p class="text-xs text-gray-400 mb-2">
                             01 Oktober 2024
                         </p>
                         <a href="#">
-                            <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-justify">Pentingnya
+                            <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900 text-justify">Pentingnya
                                 Peran Orang Tua dalam Mendidik Anak</h5>
                         </a>
-                        <p class="mb-3 font-normal text-gray-700 text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        <p class="mb-3 font-normal text-gray-700 text-justify text-xs">Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit. Donec vel
                             lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
                             Vivamus lacinia arcu commodo fermentum faucibus.</p>
@@ -227,14 +200,14 @@
                     <img class="rounded-t-lg object-cover" src="assets/img/Layanan Kolaborasi.jpg"
                         alt="Berita" />
                     <div class="p-5">
-                        <p class="text-sm text-gray-400 mb-3">
+                        <p class="text-xs text-gray-400 mb-2">
                             01 Oktober 2024
                         </p>
                         <a href="#">
-                            <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-justify">Pentingnya
+                            <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900 text-justify">Pentingnya
                                 Peran Orang Tua dalam Mendidik Anak</h5>
                         </a>
-                        <p class="mb-3 font-normal text-gray-700 text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        <p class="mb-3 font-normal text-gray-700 text-justify text-xs">Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit. Donec vel
                             lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
                             Vivamus lacinia arcu commodo fermentum faucibus.</p>
@@ -248,14 +221,14 @@
                     <img class="rounded-t-lg object-cover" src="assets/img/Layanan Kolaborasi.jpg"
                         alt="Berita" />
                     <div class="p-5">
-                        <p class="text-sm text-gray-400 mb-3">
+                        <p class="text-xs text-gray-400 mb-2">
                             01 Oktober 2024
                         </p>
                         <a href="#">
-                            <h5 class="mb-2 text-2xl font-semibold tracking-tight text-gray-900 text-justify">Pentingnya
+                            <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900 text-justify">Pentingnya
                                 Peran Orang Tua dalam Mendidik Anak</h5>
                         </a>
-                        <p class="mb-3 font-normal text-gray-700 text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing
+                        <p class="mb-3 font-normal text-gray-700 text-justify text-xs">Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit. Donec vel
                             lorem a est ultricies interdum quis a nulla. Sed mollis lorem sit amet eros luctus luctus.
                             Vivamus lacinia arcu commodo fermentum faucibus.</p>
