--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <!-- Hero -->
     <div class="w-full h-96 py-96 hero relative">
         <div class="size-full absolute inset-0 hover:opacity-0 transition-opacity flex flex-col justify-center items-center" style="background-color: rgba(0, 0, 0, .5);">
-            <h2 class="text-white font-bold text-7xl">BK SAHABAT SISWA</h2>
-            <h2 class="text-white font-bold text-7xl">BUKAN POLISI SEKOLAH</h2>
+            <h2 class="text-white font-bold text-lg lg:text-7xl">BK SAHABAT SISWA</h2>
+            <h2 class="text-white font-bold text-lg lg:text-7xl">BUKAN POLISI SEKOLAH</h2>
         </div>
     </div>
 
     <!-- Content -->
-    <main class="max-w-screen-xl mx-auto px-6 xl:p-0">
+    <main class="max-w-screen-xl mx-auto px-32 xl:p-0">
         <section class="mt-12">
             <h3 class="font-bold text-3xl">Tentang Kami</h3>
             <p class="mt-4">BK (Bimbingan dan Konseling) Sekolah hadir untuk mendukung siswa dalam mengatasi tantangan
@@ -79,7 +79,7 @@
         </section>
         <section class="mt-12">
             <h3 class="font-bold text-3xl">Misi</h3>
-            <div class="flex flex-col md:flex-row items-center md:items-stretch gap-10 mt-4 justify-between">
+            <div class="flex flex-col lg:flex-row items-center lg:items-stretch gap-10 mt-4 justify-between">
                 <div
                     class="text-white relative background-primary flex-initial rounded-2xl max-w-80 py-20 px-12 text-xl text-center flex justify-center items-center">
                     <h4 class="absolute top-6 left-6 font-bold text-3xl">
@@ -105,66 +105,66 @@
         </section>
         <section class="mt-12">
             <h3 class="font-bold text-3xl">Layanan Kami</h3>
-            <div class="mt-4 flex flex-nowrap flex-col md:flex-row gap-4">
+            <div class="mt-4 flex flex-nowrap flex-col lg:flex-row gap-12">
                 <div class="w-full">
                     <img src="assets/img/Layanan Orientasi.jpg" class="w-full">
                 </div>
-                <div class="w-full md:w-4/6">
+                <div class="w-full lg:w-4/6">
                     <h5 class="font-semibold text-2xl">
                         Layanan Orientasi
                     </h5>
                     <p class="text-justify mt-4">Layanan ini diperuntukkan bagi siswa baru untuk membantu mereka mengenal lingkungan sekolah, peraturan, dan nilai-nilai yang dijunjung tinggi. Melalui layanan ini, siswa dapat memahami tata tertib, jadwal kegiatan, serta berbagai fasilitas yang tersedia. Pengenalan ini bertujuan untuk memudahkan siswa dalam beradaptasi dan merasa nyaman di lingkungan sekolah yang baru.</p>
                 </div>
             </div>
-            <div class="mt-4 flex flex-nowrap flex-col md:flex-row-reverse gap-4">
+            <div class="mt-32 flex flex-nowrap flex-col lg:flex-row-reverse gap-12">
                 <div class="w-full">
                     <img src="assets/img/Layanan Konseling.jpg" class="w-full">
                 </div>
-                <div class="w-full md:w-4/6">
+                <div class="w-full lg:w-4/6">
                     <h5 class="font-semibold text-2xl">
                         Layanan Konsultasi
                     </h5>
                     <p class="text-justify mt-4">Layanan konsultasi memberikan kesempatan bagi siswa untuk berkonsultasi mengenai berbagai permasalahan pribadi, akademis, atau sosial yang mereka hadapi. Melalui layanan ini, siswa dapat bertemu dengan konselor yang akan mendengarkan, memahami, dan memberikan arahan yang tepat untuk membantu mereka menemukan solusi terbaik. Layanan ini dirancang untuk mendukung kesejahteraan psikologis dan emosional siswa.                    </p>
                 </div>
             </div>
-            <div class="mt-4 flex flex-nowrap flex-col md:flex-row gap-4">
+            <div class="mt-32 flex flex-nowrap flex-col lg:flex-row gap-12">
                 <div class="w-full">
                     <img src="assets/img/Penanangan Siswa Terlambat.jpg" class="w-full">
                 </div>
-                <div class="w-full md:w-4/6">
+                <div class="w-full lg:w-4/6">
                     <h5 class="font-semibold text-2xl">
                         Penanganan Siswa Terlambat
                     </h5>
                     <p class="text-justify mt-4">Layanan ini menangani siswa yang datang terlambat ke sekolah dengan memberikan bimbingan untuk meningkatkan disiplin. Melalui pendekatan yang bersifat edukatif, layanan ini membantu siswa memahami pentingnya ketepatan waktu dan tanggung jawab. Selain itu, layanan ini juga memberikan pemahaman tentang manajemen waktu yang dapat membantu siswa menghindari keterlambatan di masa depan.                    </p>
                 </div>
             </div>
-            <div class="mt-8 flex flex-nowrap flex-col md:flex-row-reverse gap-4">
+            <div class="mt-32 flex flex-nowrap flex-col lg:flex-row-reverse gap-12">
                 <div class="w-full">
                     <img src="assets/img/Layanan Klasikal.jpg" class="w-full">
                 </div>
-                <div class="w-full md:w-4/6">
+                <div class="w-full lg:w-4/6">
                     <h5 class="font-semibold text-2xl">
                         Bimbingan Klasikal
                     </h5>
                     <p class="text-justify mt-4">Layanan bimbingan klasikal menyediakan sesi bimbingan kelompok yang disesuaikan dengan kebutuhan siswa dalam berbagai aspek, seperti pengembangan diri, keterampilan sosial, dan kemampuan akademis. Melalui pendekatan bimbingan klasikal, siswa dibekali dengan pengetahuan dan keterampilan yang mendukung perkembangan diri mereka secara menyeluruh.</p>
                 </div>
             </div>
-            <div class="mt-8 flex flex-nowrap flex-col md:flex-row gap-4">
+            <div class="mt-32 flex flex-nowrap flex-col lg:flex-row gap-12">
                 <div class="w-full">
                     <img src="assets/img/Perencanaan Karir.jpg" class="w-full">
                 </div>
-                <div class="w-full md:w-4/6">
+                <div class="w-full lg:w-4/6">
                     <h5 class="font-semibold text-2xl">
                         Perencanaan Karir
                     </h5>
                     <p class="text-justify mt-4">Layanan perencanaan karir bertujuan untuk membantu siswa dalam memahami minat, bakat, dan potensi diri yang dapat dikembangkan menuju masa depan karier yang diinginkan. Siswa dapat mengikuti asesmen atau bimbingan yang dirancang untuk memandu mereka dalam memilih jurusan atau bidang pekerjaan yang sesuai dengan minat dan kemampuan mereka.</p>
                 </div>
             </div>
-            <div class="mt-8 flex flex-nowrap flex-col md:flex-row-reverse gap-4">
+            <div class="mt-32 flex flex-nowrap flex-col lg:flex-row-reverse gap-12">
                 <div class="w-full">
                     <img src="assets/img/Layanan Kolaborasi.jpg" class="w-full">
                 </div>
-                <div class="w-full md:w-4/6">
+                <div class="w-full lg:w-4/6">
                     <h5 class="font-semibold text-2xl">
                         Layanan Kolaborasi
                     </h5>
@@ -174,7 +174,7 @@
         </section>
         <section class="mt-12">
             <h3 class="font-bold text-3xl">Artikel</h3>
-            <div class="mt-4 flex gap-x-12">
+            <div class="mt-4 flex flex-col lg:flex-row gap-12 items-center lg:items-stretch">
                 <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
                     <img class="rounded-t-lg object-cover" src="assets/img/Layanan Kolaborasi.jpg"
                         alt="Berita" />
